fix footer height overlaping

--- a/css/main.css
+++ b/css/main.css
@@ -146,6 +146,7 @@ embed.header {
 embed.footer {
 	position: absolute;
 	bottom: 0;
+	height: 50px;
 }
 
 body {
